--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+spring.datasource.url=jdbc:h2:file:~/test2;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
+#spring.datasource.url=jdbc:h2:file:./testdb;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+#spring.datasource.username=admin
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+##spring.jpa.show-sql=true
+#spring.jpa.hibernate.ddl-auto=update
